--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -18,7 +18,7 @@ import Sealy from "../assets/foca.webp";
     <div class="text-start space-y-4">
       <h1 class="text-7xl font-bold text-start">SEAL<br />CODE</h1>
       <h2 class="text-xl font-bold">Desarrollo y diseño web</h2>
-      <p class="max-w-md">
+      <p class="max-w-md text-lg">
         En SealCode, desarrollamos páginas web y tiendas online de alto
         rendimiento que te hacen vender más, sin que tengas que preocuparte por
         el código.En SealCode, desarrollamos páginas web y tiendas online de
