--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,9 @@
 ---
 import AboutUs from "../components/AboutUs.astro";
+import FinalCTA from "../components/FinalCTA.astro";
+import Pricing from "../components/Pricing.astro";
+import Process from "../components/Process.astro";
+import Services from "../components/Services.astro";
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
@@ -11,4 +15,8 @@ import "../styles/global.css";
 <Layout>
   <Welcome />
   <AboutUs />
+  <Services />
+  <Process />
+  <Pricing />
+  <FinalCTA />
 </Layout>
