--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,76 +1,46 @@
 ---
-import Approved from "../assets/approved.webp";
-
 const problemas = [
   {
-    title: "Mi web no genera",
-    highlightWord: "clientes",
-    content: "Mucho tráfico, pocas ventas.",
+    content: "Vendes por Instagram o WhatsApp, pero no se ve profesional",
   },
   {
-    title: "El diseño es",
-    highlightWord: "anticuado",
-    content: "O no funciona bien en móviles.",
+    content: "La gente pregunta y no compra",
   },
   {
-    title: "El mantenimiento es un",
-    highlightWord: "dolor de cabeza",
-    content: "Cada cambio cuesta tiempo y dinero.",
+    content: "Te cuesta explicar lo que haces",
+  },
+  {
+    content: "Sientes que tu negocio podría vender más",
   },
 ];
 ---
 
 <div
-  class="h-auto pb-20 w-full flex flex-col justify-start pt-20 items-center text-center bg-white overflow-hidden relative"
+  class="h-auto pb-30 w-full flex flex-col justify-start pt-20 items-center text-center bg-white overflow-hidden relative"
 >
   <div class="flex flex-col w-full max-w-6xl items-center px-8">
     <!-- contenido -->
     <div class="text-start space-y-4 text-xl">
       <h2 class="text-5xl font-bold text-center mb-5">
-        ¿Te suenan estos <span
-          class="inline-block bg-highlight text-white px-4 pb-2 md:pb-3 mt-5 md:mt-0 rounded-lg"
-          >problemas?</span
-        >
+        ¿Te pasa alguna de estas?
       </h2>
-      <p class="mb-10 text-center text-2xl text-gray-600">
-        No estás solo. A muchos negocios les pasa
-      </p>
       <ul class="space-y-10 w-fit mx-auto">
         {
           problemas.map((problema) => (
-            <li class="flex flex-row items-start justify-start  gap-4">
-              <span class="inline-block w-5 h-5 rounded-full bg-highlight mt-1.25 flex-none" />
+            <li class="flex flex-row items-center justify-start mt-10 gap-4">
+              <span class="inline-block w-3 h-3 rounded-full bg-highlight flex-none" />
               <div>
-                <h4 class="font-semibold ">
-                  {problema.title}
-                  <span class=" text-highlight">{problema.highlightWord}</span>
-                </h4>
-                <p class=" font-normal text-lg">{problema.content}</p>
+                <p class=" font-normal text-xl">{problema.content}</p>
               </div>
             </li>
           ))
         }
       </ul>
-      <p class="text-center font-semibold text-3xl mt-10">Respira tranquilo.</p>
-      <h3 class="text-4xl font-bold text-center my-10">
-        Nosotros nos encargamos de todo
-      </h3>
+      <h3 class="text-4xl font-bold text-center my-10">No es tu culpa</h3>
+
       <p class="max-w-2xl mx-auto text-center text-2xl">
-        En <b>SealCode</b> diseñamos y desarrollamos sitios web rápidos, optimizados
-        y pensados para veder.
+        La mayoría de los pequeños negocios en México tienen este problema.
       </p>
-      <p class="max-w-2xl mx-auto text-center text-2xl">
-        Tú enfócate en tu negocio, nosotros nos encargamos del resto.
-      </p>
-    </div>
-    <div
-      class="flex flex-row mx-auto w-fit md:max-w-6xl items-center gap-4 mt-10"
-    >
-      <img src={Approved.src} alt="Approved" class="w-20 h-20 aspect-auto" />
-      <div class="flex flex-col space-y-0 text-start">
-        <p class="text-2xl font-bold -mb-2">SealCode</p>
-        <p class="text-xl">Approved</p>
-      </div>
     </div>
   </div>
 </div>
