--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -20,7 +20,8 @@ const processSteps = [
 ---
 
 <div
-  class="h-auto pb-20 w-full flex flex-col justify-start pt-0 items-center text-center bg-white overflow-hidden relative"
+  id="proceso"
+  class="h-auto pb-30 w-full flex flex-col justify-start pt-20 items-center text-center bg-white overflow-hidden relative"
 >
   <div class="flex flex-col w-full max-w-6xl items-center px-8">
     <!-- contenido -->
