--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,46 +1,83 @@
 ---
-const services = [
+import { Image } from "astro:assets";
+import Approved from "../assets/approved.webp";
+
+// const problemas = [
+//   {
+//     title: "Mi web no genera",
+//     highlightWord: "clientes",
+//     content: "Mucho tráfico, pocas ventas.",
+//   },
+//   {
+//     title: "El diseño es",
+//     highlightWord: "anticuado",
+//     content: "O no funciona bien en móviles.",
+//   },
+//   {
+//     title: "El mantenimiento es un",
+//     highlightWord: "dolor de cabeza",
+//     content: "Cada cambio cuesta tiempo y dinero.",
+//   },
+// ];
+const problemas = [
   {
-    title: "Diseño Web Personalizado",
-    description:
-      "Creamos diseños únicos y atractivos que reflejan la identidad de tu marca y capturan la atención de tus visitantes.",
+    content: "Explican claramente tu servicio",
   },
   {
-    title: "Desarrollo Web",
-    description:
-      "Utilizamos las últimas tecnologías para construir interfaces de usuario rápidas, responsivas y fáciles de usar.",
+    content: "Generan confianza desde el primer vistazo",
   },
   {
-    title: "Optimización SEO",
-    description:
-      "Mejoramos la visibilidad de tu sitio web en los motores de búsqueda para atraer más tráfico orgánico y potenciales clientes.",
+    content: "Funcionan perfecto en celular",
   },
   {
-    title: "Mantenimiento y Soporte",
-    description:
-      "Ofrecemos servicios continuos de mantenimiento y soporte para asegurar que tu sitio web funcione sin problemas y esté siempre actualizado.",
+    content: "Ayudan a que más personas te contacten",
   },
 ];
 ---
 
 <div
-  class="h-auto pb-30 w-full flex flex-col justify-start pt-40 items-center text-center bg-white overflow-hidden relative"
+  class="h-auto pb-30 w-full flex flex-col justify-start pt-20 items-center text-center bg-white overflow-hidden relative"
 >
   <div class="flex flex-col w-full max-w-6xl items-center px-8">
     <!-- contenido -->
     <div class="text-start space-y-4 text-xl">
-      <h2 class="text-5xl font-bold text-center mb-5">Nuestros Servicios</h2>
+      <h2 class="text-5xl font-bold text-center mb-5">
+        La solución: una página web hecha para vender
+      </h2>
       <div class="h-0.5 w-64 mx-auto bg-highlight"></div>
-
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
+      <p class="text-center text-3xl my-5">
+        En <b>SealCode</b> creamos páginas web que:
+      </p>
+      <ul class="space-y-10 w-fit mx-auto mt-5">
         {
-          services.map((service) => (
-            <div class="bg-gray-50 p-6 rounded-lg shadow-md hover:scale-105 transition-all duration-200">
-              <h3 class="text-xl font-bold mb-2">{service.title}</h3>
-              <p class="text-gray-600">{service.description}</p>
-            </div>
+          problemas.map((problema) => (
+            <li class="flex flex-row items-center justify-start  gap-4">
+              <span class="inline-block w-3 h-3 rounded-full bg-highlight flex-none" />
+              <div>
+                <p class=" font-normal text-xl">{problema.content}</p>
+              </div>
+            </li>
           ))
         }
+      </ul>
+
+      <p class="max-w-2xl mx-auto text-center text-2xl mt-10">
+        No necesitas saber programación. Nosotros nos encargamos de todo.
+      </p>
+    </div>
+    <div
+      class="flex flex-row mx-auto w-fit md:max-w-6xl items-center gap-4 mt-10"
+    >
+      <Image
+        width={500}
+        height={500}
+        src={Approved}
+        alt="Approved"
+        class="w-20 h-20 aspect-auto"
+      />
+      <div class="flex flex-col space-y-0 text-start">
+        <p class="text-2xl font-bold -mb-2">SealCode</p>
+        <p class="text-xl">Approved</p>
       </div>
     </div>
   </div>
