--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,31 @@
+---
+export const prerender = true;
+import Footer from "../components/Footer.astro";
+import Navbar from "../components/Navbar.astro";
+import Seo from "../components/ui/Seo.astro";
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <!-- <link rel="icon" type="image/svg+xml/webp" href="/foca.webp" /> -->
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
+    <Seo
+      title="SealCode - Creación de sitios web"
+      description="Diseñamos páginas web claras, rápidas y enfocadas en generar clientes, sin complicaciones técnicas ni lenguaje raro."
+      image="ogImage.png"
+      url="http://localhost:4321"
+    />
     <title>Astro Basics</title>
   </head>
-  <body class="text-primary">
+  <body class="text-primary" id="scroll-trigger">
+    <Navbar />
     <slot />
+    <Footer />
   </body>
 </html>
 
