--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,6 @@ import BlogHero from "../components/blog/Blog-Hero.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
+<Layout title="Inicio">
   <BlogHero />
 </Layout>
