--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,17 +2,27 @@
 export const prerender = true;
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
-import Seo from "../components/ui/Seo.astro";
 import "../styles/global.css";
+
+import Head from "@components/ui/Head.astro";
+import type { SEOProps } from "@/constants";
+
+interface Props extends SEOProps {
+  title: string;
+}
+
+const { title, ...seoProps } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="es">
+  <Head title={title} {...seoProps} />
+
+  <!-- <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <!-- <link rel="icon" type="image/svg+xml/webp" href="/foca.webp" /> -->
-    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
+    <link rel="icon" type="image/svg+xml/webp" href="/foca.webp" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <Seo
       title="SealCode - Creación de sitios web"
@@ -21,7 +31,7 @@ import "../styles/global.css";
       url="http://localhost:4321"
     />
     <title>Astro Basics</title>
-  </head>
+  </head> -->
   <body class="text-primary" id="scroll-trigger">
     <Navbar />
     <slot />
