--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ const links = [
       </li>
       <div class="flex flex-row flex-none gap-4 md:gap-8">
         <li><a href="/#contacto">contacto</a></li>
-        <li><a href="blog">blog</a></li>
+        <li><a href="/blog">blog</a></li>
       </div>
     </ul>
   </nav>
