--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -40,7 +40,7 @@ import { Check } from "@lucide/astro";
       <div class="h-0.5 w-64 mx-auto bg-highlight"></div>
 
       <ul
-        class="accordion bg-gray-100 rounded-lg shadow-xl shadow-gray-100 p-0 w-md"
+        class="accordion bg-gray-100 rounded-lg shadow-xl shadow-gray-100 p-0 w-full"
       >
         <!-- Duplicate this <li> as often as you want -->
         <li class="cursor-pointer my-1 border-b-[1.5px] border-highlight">
