--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -68,7 +68,7 @@ const relatedPosts = allPosts
   <div class="mx-auto max-w-340 px-4 font-sans sm:px-6 lg:px-8">
     <div class="grid gap-y-8 lg:grid-cols-3 lg:gap-x-6 lg:gap-y-0">
       <!-- Content -->
-      <article class="w-full lg:col-span-2">
+      <article class="w-full lg:col-span-2 px-5 md:px-10">
         <div class="py-8 lg:pe-8">
           <div class="space-y-5 lg:space-y-8">
             <BlogNavigation />
@@ -111,7 +111,7 @@ const relatedPosts = allPosts
       <!-- End Content -->
     </div>
   </div>
-  <StickyActionBar post={entry} />
+  <!-- <StickyActionBar post={entry} /> -->
 </Layout>
 
 <script>
