--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -66,9 +66,9 @@ const relatedPosts = allPosts
   tags={postTags}
 >
   <div class="mx-auto max-w-340 px-4 font-sans sm:px-6 lg:px-8">
-    <div class="grid gap-y-8 lg:grid-cols-3 lg:gap-x-6 lg:gap-y-0">
+    <div class="mx-auto">
       <!-- Content -->
-      <article class="w-full lg:col-span-2 px-5 md:px-10">
+      <article class="w-full px-5 md:px-10">
         <div class="py-8 lg:pe-8">
           <div class="space-y-5 lg:space-y-8">
             <BlogNavigation />
