--- a/src/components/ui/Head.astro
+++ b/src/components/ui/Head.astro
@@ -57,6 +57,7 @@ const canonicalURL = new URL(Astro.url.pathname, SITE_URL);
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="sitemap" href="/sitemap-index.xml" />
 
   <!-- SEO Meta -->
   <title>{fullTitle}</title>
